# ai_stock_analysis

./: .gitignore  COMPREHENSIVE_TABLE_FEATURE.md  CREDENTIALS.md  Dockerfile.backend  GET_STARTED.md  INSTALLATION.md  PRD.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  SETUP_COMPLETE.md  SETUP_STATUS.md  START_HERE.md  app.py  check_status.sh  database.py  docker-compose.yml  env.example  formatting_utils.py  prompt.md  pyproject.toml  replit.md  run.sh  scanner.py  setup.sh  start_app.sh  start_background.sh  start_dev.sh  stop_app.sh  yahoo_session.py
backend/: __init__.py  cache.py  config.py  deps.py  main.py
backend/routers/: admin.py  ai.py  automation.py  dca.py  news.py  portfolio.py  search.py  stocks.py
backend/services/: dca_service.py  news_service.py  ollama_service.py  stock_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/app/ai/: page.tsx
frontend/src/app/automation/: page.tsx
frontend/src/app/dca/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/stocks/: page.tsx
frontend/src/components/admin/: industries-admin.tsx
frontend/src/components/ai/: ai-analysis.tsx
frontend/src/components/automation/: automation-scan.tsx
frontend/src/components/dashboard/: dashboard.tsx
frontend/src/components/dca/: dca-backtest.tsx  dca-results.tsx
frontend/src/components/layout/: bottom-nav.tsx  sidebar.tsx  theme-toggle.tsx  topbar.tsx
frontend/src/components/news/: news-card.tsx  (+3 more)
(+20 files in other folders)
